<resources>


    <string name="app_name">GreenCity</string>
    <string name="title_Mon_Tri">Mon Tri</string>
    <string name="title_calendrier">Calendrier</string>
    <string name="title_Profil">Profil</string>
    <string name="HOME">TRI RECYCLAGE</string>
    <string name="CALENDRIER">CALENDRIER</string>
    <string name="PROFIL">PROFIL</string>
    <string name="Passages">Passage des poubelles : </string>

    <string name="Inscription">INSCRIPTION</string>
    <string name="Prénom">Entrer votre prénom </string>
    <string name="Nom">Entrer votre nom </string>
    <string name="Numero_Rue">Entrer votre numéro de rue </string>
    <string name="Nom_Rue">Entrer le nom de votre rue </string>
    <string name="Ville">Entrer votre Ville</string>
    <string name="Mail">Entrer votre adresse mail </string>
    <string name="MDP">Entrer votre mot de passe </string>
    <string name="Suivant">Suivant</string>
    <string name="Ouverture">Félicitation, Votre compte est créé !  </string>
    <string name="Recherche">Recherche</string>


</resources>