<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/Recherche" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_eco_24"
        android:title="@string/title_Mon_Tri"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/title_calendrier" />



    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/title_Profil" />


</menu>