<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        />

    <TextView
        android:layout_width="218dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:text="@string/Inscription"
        android:textColor="@color/Green"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/Prénom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        android:hint="@string/Prénom" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/Nom" />

    <EditText
        android:id="@+id/numRue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Numero_Rue"
        android:layout_marginTop="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <EditText
        android:id="@+id/NRue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/Nom_Rue" />

    <EditText
        android:id="@+id/Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Mail"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="350dp" />

    <EditText
        android:id="@+id/MDP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/MDP"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="400dp" />

    <Button
        android:id="@+id/Suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Suivant"
        android:layout_gravity="right"

        android:layout_alignParentRight="true"
        android:layout_marginTop="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
       />

</RelativeLayout>